add input functions, start calculation functions

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <label for="sauce">Pizza Sauce:</label>
           <div class="radio form-group">
             <label for="traditional">
-              <input type="radio" name="sauce" value="traditional" id="traditional">Traditional Tomato-based Sauce
+              <input type="radio" name="sauce" value="traditional" id="traditional" checked>Traditional Tomato-based Sauce
             </label><br>
             <label for="white">
               <input type="radio" name="sauce" value="white" id="white">Garlic Parmesan White Sauce
