--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <select name="size" class="form-control" id="pizzaSize">
             <option value="Small">Small</option>
             <option value="Medium">Medium</option>
-            <option value="Large">Large</option>
+            <option value="Large" selected>Large</option>
             <option value="XLarge">Extra Large</option>
           </select>
 
@@ -76,8 +76,8 @@
         <h2>Cost Calculation</h2>
         <h3>Here is what you ordered <span id="orderName"></span>:</h3>
 
-        <div class="row">
-          <div class="col col-6-md">
+        <div class="row" id="costs">
+          <div class="col col-6-md" id="itemList">
             <h4>Pizza size: </h4>
             <p><span id="showSize"></span></p>
   
@@ -86,22 +86,24 @@
   
             </ul>
   
+            <br>
             <h4>Pizza Sauce: </h4>
             <p><span id="showSauce"></span></p>
   
             <h3>Total Cost: </h3>
           </div>
           
-          <div class="col col-6-md">
-            <h4> </h4>
+          <div class="col col-6-md" id="costList">
+            <h4>Base Size Cost: </h4>
             <p><span id="sizeTotal"></span></p>
   
-            <h4> </h4>
+            <h4>Price per Topping:</h4>
             <ul id="toppingCosts">
   
             </ul>
-            <p><span id="toppingTotal"></span></p>
+            <p>Topping Total: <span id="toppingTotal"></span></p>
   
+            <h4>Sauce Charge:</h4>
             <p><span id="sauceTotal"></span></p>
   
             <h3><span id="showTotal"></span></h3>
@@ -113,7 +115,7 @@
       </div> <!--End of costDisplay-->
 
       <div id="confirmDisplay">
-        <h2>Thank you for ordering with us!  Your pizza should be ready to pick up at our store in 30 minutes.</h2>
+        <h2>Thank you for ordering with us <span id="orderName2"></span>!  Your pizza should be ready to pick up at our store in 30 minutes.</h2>
 
         <button class="btn-primary" id="returnHomeButton">Return to Home</button>
       </div>
