add more styling, finish README

--- a/index.html
+++ b/index.html
@@ -37,26 +37,28 @@
             <option value="XLarge">Extra Large</option>
           </select>
 
-          <div class="form-group">
+          
+          <div class="form-group toppingDiv">
             <label for="toppings">Toppings:</label><br>
-            <input type="checkbox" name="toppings" value="Mozzarella Cheese" id="cheese"><label> Mozzarella Cheese</label><br>
-            <input type="checkbox" name="toppings" value="Goat Cheese" id="goatCheese"><label> Goat Cheese</label><br>
-            <input type="checkbox" name="toppings" value="Pepperoni" id="pepperoni"><label> Pepperoni</label><br>
-            <input type="checkbox" name="toppings" value="Sausage" id="sausage"><label> Sausage</label><br>
-            <input type="checkbox" name="toppings" value="Chicken" id="chicken"><label> Chicken</label><br>
-            <input type="checkbox" name="toppings" value="Ham" id="ham"><label> Ham</label><br>
-            <input type="checkbox" name="toppings" value="Bacon" id="bacon"><label> Bacon</label><br>
+            <input type="checkbox" name="toppings" value="Mozzarella Cheese" id="cheese"><label for="cheese"> Mozzarella Cheese</label><br>
+            <input type="checkbox" name="toppings" value="Goat Cheese" id="goatCheese"><label for="goatCheese"> Goat Cheese</label><br>
+            <input type="checkbox" name="toppings" value="Pepperoni" id="pepperoni"><label for="pepperoni"> Pepperoni</label><br>
+            <input type="checkbox" name="toppings" value="Sausage" id="sausage"><label for="sausage"> Sausage</label><br>
+            <input type="checkbox" name="toppings" value="Chicken" id="chicken"><label for="chicken"> Chicken</label><br>
+            <input type="checkbox" name="toppings" value="Ham" id="ham"><label for="ham"> Ham</label><br>
+            <input type="checkbox" name="toppings" value="Bacon" id="bacon"><label for="bacon"> Bacon</label><br>
+            <input type="checkbox" name="toppings" value="Prawns" id="prawns"><label for="prawns"> Prawns</label><br>
 
-            <input type="checkbox" name="toppings" value="Mushrooms" id="mushrooms"><label> Mushrooms</label><br>
-            <input type="checkbox" name="toppings" value="Spinach" id="spinach"><label> Spinach</label><br>
-            <input type="checkbox" name="toppings" value="Onions" id="onions"><label> Onions</label><br>
-            <input type="checkbox" name="toppings" value="Tomatoes" id="tomatoes"><label> Tomatoes</label><br>
-            <input type="checkbox" name="toppings" value="Bellpeppers" id="bellpeppers"><label> Bellpeppers</label><br>
-            <input type="checkbox" name="toppings" value="Olives" id="olives"><label> Olives</label><br>
-            <input type="checkbox" name="toppings" value="Artichokes" id="artichokes"><label> Artichokes</label><br>
+            <input type="checkbox" name="toppings" value="Mushrooms" id="mushrooms"><label for="mushrooms"> Mushrooms</label><br>
+            <input type="checkbox" name="toppings" value="Spinach" id="spinach"><label for="spinach"> Spinach</label><br>
+            <input type="checkbox" name="toppings" value="Onions" id="onions"><label for="onions"> Onions</label><br>
+            <input type="checkbox" name="toppings" value="Tomatoes" id="tomatoes"><label for="tomatoes"> Tomatoes</label><br>
+            <input type="checkbox" name="toppings" value="Bellpeppers" id="bellpeppers"><label for="bellpeppers"> Bellpeppers</label><br>
+            <input type="checkbox" name="toppings" value="Olives" id="olives"><label for="olives"> Olives</label><br>
+            <input type="checkbox" name="toppings" value="Artichokes" id="artichokes"><label for="artichokes"> Artichokes</label><br>
 
-            <input type="checkbox" name="toppings" value="Pineapple" id="pineapple"><label> Pineapple</label><br>
-            <input type="checkbox" name="toppings" value="Anchovies" id="anchovies"><label> Anchovies</label><br>
+            <input type="checkbox" name="toppings" value="Pineapple" id="pineapple"><label for="pineapple"> Pineapple</label><br>
+            <input type="checkbox" name="toppings" value="Anchovies" id="anchovies"><label for="anchovies"> Anchovies</label><br>
           </div>
 
           <label for="sauce">Pizza Sauce:</label>
